# tree-sitter-lua

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  go.mod  grammar.js  lua-syntax.md  package.json  pyproject.toml  tree-sitter.json
.github/workflows/: ci.yml
bindings/go/: binding_test.go
bindings/python/tree_sitter_lua/: __init__.py
bindings/rust/: lib.rs
queries/: folds.scm  highlight.scm  highlights.scm  indents.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test-lua/: all.lua  bench_small.lua  constants.lua  dev.lua  obfuscated.lua
test/corpus/: comments.txt  expressions.txt  functions.txt  literals.txt  statements.txt
