[package]
name = "tree-sitter-lua"
description = "Tree sitter for Lua"
version = "2.0.0"
authors = ["Zaenalos <chamianramesesmendez@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "lua"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/zaenalos/tree-sitter-lua"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.7"
